Added broken image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="col-sm-6 col-md-5 ">
                     <div class="about-img">
                       <figure>
-                        <img src="http://www.iiitkota.ac.in/images/Administration/director.jpg" class="prof-name" alt="">
+                        <img src="assets/img/director.jpg" class="prof-name" alt="">
                         <figcaption>Prof. Udaykumar R Yaragatti</figcaption>
                       </figure>
                     </div>
